# VaReCoF

./: CMakeLists.txt  INSTALL  README.md  build.sh  environment.yml  meta.yaml
corr_pot/: Makefile  c2h3_ch3_special_corr.f  c2h3_h.f  c2h3_h_cidz.f  c2h3_h_new.f  c2h3_h_special_corr.f  c2h3_o.f  c2h3o_h.f  c2h5_h.f  c2h5_h_old.f  c2h5_h_special_corr.f  c2h5_h_special_corr_old.f  c2h5_o.f  c3h3_h.f  c3h5_h.f  c_aux.c  cc_000_xxx_corr.f  cc_caspt2_corr.f  cch_h.f  ch2oh_h.f  ch3_h.f  ch3_h_hirst.f  ch3_h_vdz_corr.f  ch3_h_vdz_corr_old.f  ch3_o.f  ch3o_h.f  ch3o_h_qc.f  ch_caspt2_corr.f  ch_h.f  ch_xxx_corr.f  commonpot.fi  data.fi  f_aux.f  hccch_h.f  nco_h.f  param.fi  param2.fi  pot_aux.f  tmp.f  tmp2.f  (+1 more)
manual/: varecof_manual.doc
old/: Makefile
scripts/: submit.ssh
src/: comm.cc  comm.hh  convert_corr.cc  convert_multi.cc  convert_multi.cc.orig  convert_struct.cc  convolute.cc  cut_multi.cc  divsur.cc  divsur.hh  dummi.cc  dynamics.cc  dynamics.hh  ej_flux.cc  ej_flux.cc.orig  error.cc  error.hh  expression.cc  expression.hh  flux.cc  flux.hh  force.cc  force.hh  gauss.cc  gauss.hh  input.cc  input.cc.orig  input.hh  input.hh.orig  integral.cc  integral.hh  interflux.cc  interflux.hh  interpolate.cc  io.hh  lapack.h  log.cc  log.hh  math.cc  math.hh  (+37 more)
